# solana-nAsset

token/: README.md
token/cli/: Cargo.toml
token/js/: package.json
token/js/cli/: nAssetTest.js  token-test.js
token/js/client/: token.js
token/program/: Cargo.toml
token/program/src/: instruction.rs  processor.rs  state.rs
