[package]	
authors = ["Nova Fianace Maintainers <bacem.bergaoui@gmail.com>"]	
developers = ["<korbosli.jawaher@gmail.com> <zouaoui.karima09@gmail.com>"]
description = "SPL-Token Command-line Utility"
edition = "2018"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-token-cli"
repository = "https://github.com/sqoin/nasset-solana.git"	
version = "1.0.0"	

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
solana-account-decoder = "=1.6.7"
solana-clap-utils = "=1.6.7"
solana-cli-config = "=1.6.7"
solana-cli-output = "=1.6.7"
solana-client = "=1.6.7"
solana-logger = "=1.6.7"
solana-remote-wallet = "=1.6.7"
solana-sdk = "=1.6.7"
spl-token = { version = "3.1", path="../program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0", path="../../associated-token-account/program", features = [ "no-entrypoint" ] }

[[bin]]
name = "spl-token"
path = "src/main.rs"
